force-app/main/default/objects/Estoque__c/Estoque__c.object-meta.xml
<CustomObject>
    <description>Controle de estoque dos produtos cadastrados</description>
    <label>Estoque</label>
    <nameField>
        <label>Nome do produto</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Estoque de Produtos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>