force-app/main/default/objects/Estoque__c/fields/Categoria__c.field-meta.xml
<CustomField>
    <fullName>Categoria__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Categoria</label>
    <referenceTo>Categoria__c</referenceTo>
    <relationshipLabel>Estoque de Produtos</relationshipLabel>
    <relationshipName>Estoque_de_Produtos</relationshipName>
    <type>Lookup</type>
</CustomField>