force-app/main/default/objects/Estoque__c/fields/Estoque_atual__c.field-meta.xml
<CustomField>
    <fullName>Estoque_atual__c</fullName>
    <description>Estoque atualizado</description>
    <label>Estoque atual</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>