force-app/main/default/objects/Estoque__c/fields/Estoque_minimo__c.field-meta.xml
<CustomField>
    <fullName>Estoque_minimo__c</fullName>
    <description>Estoque mínimo de segurança exigido para o produto</description>
    <label>Estoque mínimo</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>