force-app/main/default/objects/Estoque__c/fields/Mercadoria__c.field-meta.xml
<CustomField>
    <fullName>Mercadoria__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Mercadoria</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Mercadorias__c.Ativo__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Mercadorias__c</referenceTo>
    <relationshipLabel>Estoque de Produtos</relationshipLabel>
    <relationshipName>Estoque_de_Produtos</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>