force-app/main/default/objects/Estoque__c/fields/Status_do_estoque__c.field-meta.xml
<CustomField>
    <fullName>Status_do_estoque__c</fullName>
    <label>Status do estoque</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Baixo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>