force-app/main/default/objects/Estoque__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Mercadoria__c</columns>
    <columns>NAME</columns>
    <columns>Categoria__c</columns>
    <columns>Estoque_atual__c</columns>
    <columns>Estoque_minimo__c</columns>
    <columns>Status_do_estoque__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>